--- a/main.tex
+++ b/main.tex
@@ -243,6 +243,7 @@
 \bibitem{QuantumDistilation}Horodecki, M., Oppenheim, J., \& Winter, A. (2005). Partial quantum information. Nature, 436(7051), 673-676. http://dx.doi.org/10.1038/nature03909.
 \bibitem{LindenPaper}Linden, N., Popescu, S., Short, A., \& Winter, A. (2009). Quantum mechanical evolution towards thermal equilibrium. Physical Review E, 79(6). http://dx.doi.org/10.1103/physreve.79.061103.
 \bibitem{RenyiEntropia}Hayden, P., van Dam, W.(2002). "Renyi-entropic bounds on quantum communication", arXiv:quant-ph/0204093.
+\bibitem{MullerHistory} Muller, I. (2007). A history of thermodynamics. Berlin: Springer-Verlag GmbH.
 
 \end{thebibliography}
 
