ahi mirando esos preliminares

--- a/Capitulos/preliminares.tex
+++ b/Capitulos/preliminares.tex
@@ -129,15 +129,17 @@ Históricamente se escogió la entropía de Gibbs porque da este resultado para 
 \subsection{Ergodicidad}
 En esta sección se hablará un poco sobre el problema de ergodicidad siguiendo a \cite{TodaStat}, se planteará las dificultades y se verán algunas soluciones que se han dado para este problema. Se habla de este problema ya que es fundamental la hipótesis de ergodicidad para la mecánica estadística, además la nueva perspectiva que se mostrará en los siguientes capítulos \cite{Popescu2006}, no hace énfasis en esta hipótesis es más ni siquiera llega a ser una pregunta que necesite ser resuelta. Para ver por qué facilita tanto evitar esta hipótesis se dará esta sección.
 \\
-La mecánica estadística tiene como base el principio de probabilidades iguales generalmente en la literatura siempre se empieza hablando de cómo se acepta el principio desde una vista de la teoría de probabilidad. Pero hay un concepto que no es profundizado en general por los textos usados regularmente; y es el por qué se debe introducir la probabilidad en estos casos. Libros como \cite{HuangStat},\cite{LandauStat} empiezan explicando cómo se manejaría un problema de muchas partículas desde la forma clásica. La idea que muestra es la forma habitual de introducir la mecánica estadística, se presenta por qué describir avogadro número de partículas es complicado aunque se  tenga las ecuaciones y se pueda de alguna forma (numérica o computacional) de resolver todas las ecuaciones que salen. Entonces se sigue explicando que para resolver el problema se tiene en cuenta que la complejidad de la interacciones que hay entre el sistema que se estudia y el ambiente, hace que el sistema se encuentre en muchos estado varias veces, esto otorga un comportamiento probabilístico al sistema que puede llegar a comportarse como uno aislado.
+La mecánica estadística tiene como base el principio de probabilidades iguales generalmente en la literatura siempre se empieza hablando de cómo se acepta el principio desde la teoría de la probabilidad. Pero hay un concepto que no es profundizado en general por los textos usados regularmente; el porqué se debe introducir la probabilidad en estos casos.\\
+Libros como \cite{HuangStat},\cite{LandauStat} empiezan explicando cómo se manejaría un problema de muchas partículas desde la forma clásica. La idea que muestra es la forma habitual de introducir la mecánica estadística, se presenta que describir avogadro número de partículas es complicado aunque se  tenga las ecuaciones y se pueda de alguna forma (numérica o computacional) de resolver todas las ecuaciones que salen. Entonces se sigue explicando que para resolver el problema se tiene en cuenta que la complejidad de las	 interacciones que hay entre el sistema y el ambiente, hace que el sistema se encuentre en muchos estados varias veces. Esto otorga un comportamiento probabilístico al sistema que puede llegar a comportarse como uno aislado.
 \\ 
-Con estos argumentos empleados introducen las probabilidades al sistema mecánico sin tener que entrar en un conflicto con la mecánica clásica, nótese que luego de dada esa explicación siguen a formalizar lo dicho y construye la mecánica estadística que se conoce. Pero hay otra forma de introducir las probabilidades a estos sistemas de muchos grados de libertad y es por hipótesis, el libro \cite{KhinchinStat} sigue esta filosofía. Aunque hayan dos formas de establecer las probabilidades de igual forma se llega al problema de ergodicidad. 
+Estos argumentos introducen las probabilidades al sistema mecánico sin tener que entrar en un conflicto con la mecánica clásica, nótese que luego de dada esa explicación siguen a formalizar lo dicho y construye la mecánica estadística que se conoce. Pero hay otra forma de introducir las probabilidades a estos sistemas de muchos grados de libertad y es por hipótesis, el libro \cite{KhinchinStat} sigue esta filosofía. Aunque hayan dos formas de establecer las probabilidades de igual forma se llega al problema de ergodicidad. 
 \\
-La hipótesis de ergodicidad afirma que el promedio temporal de una cantidad mecánica en un sistema aislado es igual al promedio de ensamble. Dada una teoría que explique algún fenómeno que nos interese se querrá probar que tan buenos resultados se obtienen de ella. Para esto se comparará con el experimento pero las cantidades físicas en una teoría aparecen como funciones de las variables dinámicas. Pero ya se ve un problema claro en este procedimiento cómo se puede comprar los datos medidos en el laboratorio con las funciones de la teoría; las funciones de las variables dinámicas toman valores diferentes para varios estados del sistema pero para poder comparar los resultados experimentales se debería saber cuál es el estado del sistema o sea dar todas las variables dinámicas para poder así estar seguros que se está comparando los datos con el estado específico. Pero en el caso de un gas sería imposible poder saber todas las posiciones y momentos.
+La hipótesis de ergodicidad afirma que el promedio temporal de una cantidad mecánica en un sistema aislado es igual al promedio de ensamble. Dada una teoría que explique algún fenómeno que nos interese se querrá probar que tan buenos resultados se obtienen de ella. Para esto se comparará con el experimento pero las cantidades físicas en una teoría aparecen como funciones de las variables dinámicas. Pero ya se ve un problema claro en este procedimiento cómo se puede comprar los datos medidos en el laboratorio con las funciones de la teoría; las funciones de las variables dinámicas toman valores diferentes para varios estados del sistema pero para poder comparar los resultados experimentales se debería saber cuál es el estado del sistema o sea dar todas las variables dinámicas para poder estar seguros que se está comparando los datos con el estado específico, pero como ya se ha dicho esto es imposible.
 \\
-Pero hay un punto en este caso y es que al medir una cantidad física esta no se observa de manera instantánea, se demora algún tiempo $\tau$ para poder observarla. En el caso de una cantidad termodinámica como la temperatura el tiempo en que se demora midiendo va desde $\tau_{0}$ que es el tiempo necesario para que no hayan correlaciones del movimiento molecular y  $\tau_{m}$ que es el tiempo máximo en el que la propiedad macroscópica que se mide no cambia. Por ejemplo la temperatura al medirla se necesita esperar un tiempo $\tau_{0}$ par que se estabilice el sistema y el termómetro y la medición se puede tomar hasta $\tau_{m}$ cuando el sistema se vuelva a perturbar. Cualquier cantidad que se mida durante este intervalo se supone que no debe depender de $\tau$ en algunos sistemas que llegan al equilibrio $\tau_{m}$ puede extenderse al infinito.
+Pero hay un detalle en este caso y es que al medir una cantidad física esta no se observa de manera instantánea, se demora algún tiempo $\tau$ para poder observarla. En el caso de una cantidad termodinámica, el tiempo en que se demora midiendo va desde $\tau_{0}$, que es el tiempo necesario para que no hayan correlaciones del movimiento molecular, y  $\tau_{m}$ que es el tiempo máximo en el que la propiedad macroscópica que se mide no cambia. Con la temperatura al medirla se necesita esperar un tiempo $\tau_{0}$ para que se estabilice el sistema y el termómetro, y la medición se puede tomar hasta $\tau_{m}$ cuando el sistema se vuelva a perturbar. Cualquier cantidad que se mida durante este intervalo se supone que no debe depender de $\tau$ en algunos sistemas que llegan al equilibrio $\tau_{m}$ puede extenderse al infinito.
 \\
-Entonces con lo dicho anteriormente se puede proponer la siguiente idea de medición. Sea $P$ un punto en el espacio de fase, sea $f(P,t)$ una función sobre el espacio de fase, si esta función corresponde a una cantidad termodinámica no debe depender de su estado inicial $P$. Porque sistemas termodinámicos con cantidades termodinámicas iguales se encuentran es estados dinámicos diferentes. La relación de esta función con los parámetros está dada por un promedio en este caso el promedio temporal luego:
+Entonces con lo dicho anteriormente se puede proponer la siguiente idea de medición. Sea $P$ un punto en el espacio de fase, y sea $f(P,t)$ una función sobre el espacio de fase, si esta función corresponde a una cantidad termodinámica no debe depender de su estado inicial $P$. Porque sistemas termodinámicos con cantidades termodinámicas iguales se pueden encontrar en estados dinámicos diferentes. \\
+La relación de esta función con los parámetros está dada por un promedio en este caso el promedio temporal luego:
 \begin{equation}
 \overline{f_{\tau}}(P)= \frac{1}{\tau} \int_{0}^{\tau} f(P,t) dt
 \end{equation}
@@ -148,13 +150,13 @@ si se está en el equilibrio
 \overline{f}(P)= \lim_{\tau \to \infty} \frac{1}{\tau} \int_{0}^{\tau} f(P,t) dt.
 \end{equation}
 \\
-Para poder mantener consistencia con la termodinámica los promedios $\overline{f_{\tau}}(P)$ y  $\overline{f}(P)$ deben ser independientes de $\tau$. Además en el equilibrio los dos promedio deben ser iguales, esto es para $\tau_{m}$ muy grande. Ahora el promedio de ensamble está definido así:
+Para poder mantener consistencia con la termodinámica los promedios $\overline{f_{\tau}}(P)$ y  $\overline{f}(P)$ deben ser independientes de $\tau$. Además en el equilibrio los dos promedio deben ser iguales, esto es para $\tau_{m}$ muy grande. \\
+El promedio de ensamble está definido así:
 
 \begin{equation}
-\langle f \rangle = \frac{1}{\Omega} \int_{\Gamma} f(P,t) d\Gamma \\
-\quad \Omega= \int_{\Gamma} d\Gamma,
+\langle f \rangle = \frac{1}{\Omega} \int_{\Gamma} f(P,t) d\Gamma \quad ; \quad \Omega= \int_{\Gamma} d\Gamma,
 \end{equation}
-la integral es sobre el espacio accesible en el espacio de fase, $d\Gamma$ es el elemento de volumen. Como el punto $P$ evoluciona gracias a la transformación $\phi$, la cual preserva la medida gracias al teoremade Liouville, $\langle f \rangle$ no depende del tiempo. Luego 
+la integral es sobre el espacio accesible en el espacio de fase, $d\Gamma$ es el elemento de volumen. Como el punto $P$ evoluciona gracias a las ecuaciones de Hamilton se preserva la medida por el teorema de Liouville, luego $\langle f \rangle$ no depende del tiempo. Entonces 
 \begin{equation}
 \langle f \rangle =  \overline{\langle f \rangle}.
 \end{equation}
@@ -166,10 +168,13 @@ Como $\overline{f}$ es independiente de $P$ y constante sobre  todo el espacio d
 \begin{equation} \label{ergodicidad}
 \langle f \rangle = \overline{f}.
 \end{equation}
-Aquí se ha mostrado por qué es válido el uso del promedio de ensamble en vez del temporal. Para esta demostración se ha usado dos suposiciones. Primero que  $\overline{f}(P)$ tiene el mismo valor para cualquier $P$ en la misma trayectoria que este punto traza(G-Path). Birkhoff demostró esta aseveración. El problema se encuentra en que si $\overline{f}(P)$  tiene un valor definido independiente de la condición inicial $P$ y si esto se satisface para $P$ en cualquier G-path. Boltzmann propuso que para satisfacer la igualdad \ref{ergodicidad}, el G-path debe pasar por todos los puntos de la superficie de energía. Como la trayectoria del punto pasa por todos los puntos dado suficiente tiempo, el promedio temporal es igual al promedio de ensamble. Esto es lo que Boltzmann llamó la hipótesis de ergodicidad, esta idea sobre la trayectoria del punto $P$ es llamado la condición de ergodicidad en el sentido de Boltzmann. Como la trayectoria dinámica es un conjunto unidimensinal de puntos continuos y nunca se intersecta así misma en un superficia multidimensional constante de energía, hace imposible una correspondencia uno a uno de un espacio de dimensión dos o mayor a un espacio unidimensional, luego la ergodicidad en el sentido de Boltzmann no puede concebirse. Ergodicidad, la igualdad \ref{ergodicidad}, no siempre implica ergodicidad en el sentido de Boltzmann.
+Aquí se ha mostrado por qué es válido el uso del promedio de ensamble en vez del temporal. Para esta demostración se ha usado dos suposiciones. Primero que  $\overline{f}(P)$ tiene el mismo valor para cualquier $P$ en la misma trayectoria que este punto traza, lo que llama \cite{Ehrenfest} el G-Path. Birkhoff demostró esta aseveración \cite{Birkhoff}. El problema es saber si $\overline{f}(P)$  tiene un valor definido independiente de la condición inicial $P$ y si esto se satisface para $P$ en cualquier G-path. \\
+Boltzmann propuso que para satisfacer la igualdad \ref{ergodicidad}, el G-path debe pasar por todos los puntos de la superficie de energía. Como la trayectoria del punto pasa por todos los puntos dado suficiente tiempo, el promedio temporal es igual al promedio de ensamble. Esto es lo que Boltzmann llamó la hipótesis de ergodicidad, esta idea sobre la trayectoria del punto $P$ es llamado la condición de ergodicidad en el sentido de Boltzmann.
+\\ 
+Como la trayectoria dinámica es un conjunto unidimensinal de puntos continuos y nunca se intersecta así misma en un superficia multidimensional constante de energía, hace imposible una correspondencia uno a uno de un espacio de dimensión dos o mayor a un espacio unidimensional, luego la ergodicidad en el sentido de Boltzmann no puede concebirse. Ergodicidad, la igualdad \ref{ergodicidad}, no siempre implica ergodicidad en el sentido de Boltzmann.
 \\
 \\
-Aunque la hipótesis ergodica se encuentre en un punto importante en la construcción de la física estadística, hay sistemas que no son ergodicos pero aún así se pueden tratar con la mecánica estadística. El calor específico de los sólidos pueden ser modelado de manera correcta bajo el supuesto de una red de partículas cuánticas vibrando en una aproximación armónica.  El tratamiento clásico también es satisfactoria para temperaturas altas. Como se sabe, cualquier modo normal en vibraciones armónicas es independiente de los otros modos normales y la energía de cada modo es constante. Para describir el calor específico se puede hacer por medio de la aproximación armónica pero si existen terminos no lineales pequeños o anarmónicos habrá una intercambio de energía entre los modos normales. Hay problema famoso que E. Fermi, J. Pasta y S. Ulam investigaron un sistema de una cadena lineal de $N+1$ partículas idénticas de masa m conectadas por resortes idénticos. Pero en  este caso ellos incluyeron interacciones no lineares al Hamiltoniano de este sistema, que puede ser escrito 
+Aunque la hipótesis ergodica se encuentre en un punto importante en la construcción de la física estadística, hay sistemas que no son ergodicos pero aún así se pueden tratar con la mecánica estadística. El calor específico de los sólidos pueden ser modelado de manera correcta bajo el supuesto de una red de partículas cuánticas vibrando en una aproximación armónica.  El tratamiento clásico también es satisfactoria para temperaturas altas. Como se sabe, cualquier modo normal en vibraciones armónicas es independiente de los otros modos normales y la energía de cada modo es constante. Para describir el calor específico se puede hacer por medio de la aproximación armónica pero si existen terminos no lineales pequeños o anarmónicos habrá una intercambio de energía entre los modos normales. Existe un problema famoso que E. Fermi, J. Pasta y S. Ulam investigaron \cite{FermiPastaUlam}, un sistema de una cadena lineal de $N+1$ partículas idénticas de masa $m$ conectadas por resortes idénticos. Pero en  este caso ellos incluyeron interacciones no lineares al Hamiltoniano de este sistema, que puede ser escrito 
 \begin{equation}
 H= \sum_{k} \frac{1}{2m} p_{k}^{2} +\frac{\kappa}{2}\sum_{k} (q_{k+1}-q_{k})^{2}+\frac{\lambda}{s}\sum_{s} (q_{k+1}-q_{k})^{s},
 \end{equation}
@@ -185,7 +190,8 @@ con $\omega_{j} =2(\frac{\kappa }{m})^{\frac{1}{2}} \sin (\frac{j \pi}{2N})$. Do
 \begin{equation}
 E_{k} = \frac{1}{2} m(\dot{x}^{2}_{k}+ \omega_{k}^{2}x_{k}^{2}).
 \end{equation}
-Simularon cómo las energías cambiaban en el tiempo cuando inicialmente se le da al menor modo una cantidad de energía. Se esperaba que la energía dada al menor modo fuese siendo distribuida paulatinamente a los demás modos y al final se tuviese una cantidad de energía igualmente distribuida en cada modo. Pero este no fue el hallazgo, para $N=32$ con un potencial cúbico y con las constantes $\kappa=m=1$ y $\lambda=1/4$. Las condiciones iniciales eran; las velocidades iguales a 0 y los desplazamientos dados por la curva sinusoidal del menor modo normal. Lo que se vio fue que la energía regresa al primer modo de manera periódica, la energía es intercambiada en los modos más bajos pero no mucho en los modos más grandes. Se llega a la conclusión que el sistema regresa de forma casi exacta a su estado inicial. Entonces la presencia de anarmonicidad no implica ergodicidad para este sistema. Esto es un ejemplo de un sistema que no es ergódico, esto deja mucha desconformidad dado que no se llega ver porqué la hipótesis que se usar para formar la mecánica estadística no se cumple para sistemas que comúnmente  son usados en la física y son utilizados de manera frecuente. Este descontento es una de las partes que no deja al marco teórico de la física estadística muy estable en comparación con otras ramas de la física.
+Simularon cómo las energías cambiaban en el tiempo cuando inicialmente se le da al menor modo una cantidad de energía. Se esperaba que la energía dada al menor modo fuese siendo distribuida paulatinamente a los demás modos y al final se tuviese una cantidad de energía igualmente distribuida en cada modo. Pero este no fue el hallazgo, para $N=32$ con un potencial cúbico y con las constantes $\kappa=m=1$ y $\lambda=1/4$. Las condiciones iniciales eran: las velocidades iguales a 0 y los desplazamientos dados por la curva sinusoidal del menor modo normal. Lo que se vio fue que la energía regresa al primer modo de manera periódica, la energía es intercambiada en los modos más bajos pero no mucho en los modos más grandes. Se llega a la conclusión que el sistema regresa de forma casi exacta a su estado inicial. \\
+Entonces la presencia de anarmonicidad no implica ergodicidad para este sistema. Esto es un ejemplo de un sistema que no es ergódico, esto deja mucha desconformidad dado que no se llega ver porqué la hipótesis que se usar para formar la mecánica estadística no se cumple para sistemas que comúnmente  son usados en la física y son utilizados de manera frecuente. Este descontento es una de las partes que no deja al marco teórico de la física estadística muy estable en comparación con otras ramas de la física.
 
 
 \section{Herramientas de la Teoría Cuántica}
