--- a/main.tex
+++ b/main.tex
@@ -244,7 +244,9 @@
 \bibitem{LindenPaper}Linden, N., Popescu, S., Short, A., \& Winter, A. (2009). Quantum mechanical evolution towards thermal equilibrium. Physical Review E, 79(6). http://dx.doi.org/10.1103/physreve.79.061103.
 \bibitem{RenyiEntropia}Hayden, P., van Dam, W.(2002). "Renyi-entropic bounds on quantum communication", arXiv:quant-ph/0204093.
 \bibitem{MullerHistory} Muller, I. (2007). A history of thermodynamics. Berlin: Springer-Verlag GmbH.
-
+\bibitem{Ehrenfest}Ehrenfest, P., Ehrenfest, T., \& Moravcsik, M. The conceptual foundations of the statistical approach in mechanics.
+\bibitem{FermiPastaUlam} Fermi, E., Pasta, J., Ulam, S. (1955). Collected Papers of Enrico Fermi, Vol II, University of Chicago press, Chicago 1965.
+\bibitem{Birkhoff}Birkhoff, G. (1931). Proof of the Ergodic Theorem. Proceedings Of The National Academy Of Sciences, 17(12), 656-660. http://dx.doi.org/10.1073/pnas.17.2.656
 \end{thebibliography}
 
 
